Expo date change ✍️

--- a/index.html
+++ b/index.html
@@ -2144,9 +2144,9 @@
 
             <h1>La Fabrique de l’affiche</h1>
 
-            <h2>04.05 au<br>24.06</h2>
+            <h2>23.05 au<br>14.07</h2>
 
-            <div class="lieux"><p>Musée d’art et d’histoire de Chaumont</p></div>
+            <div class="lieux"><p>Le Signe</p></div>
 
             <div class="sub-header">
 
