Change Expo and Ceremonie img 😉

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
     <div id="lnk-event-2"></div>
 
     <div class="section-img">
-        <img src="photos/evenement-ceremonie-de-remise-des-prix-2.jpg"/>
+        <img src="photos/evenement-ceremonie-de-remise-des-prix-3.jpg"/>
     </div>
 
     <section class="flex">
@@ -2060,7 +2060,9 @@
 
     <div id="lnk-event-expo-1"></div>
 
-    <div class="section-img"></div>
+    <div class="section-img">
+        <img src="photos/expo-post-medium.jpg"/>
+    </div>
 
     <section class="flex">
 
