Add pdf and link to vote page 🥊

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li><a href="#conferences" class="link">conférences</a></li>
         <li><a href="#expositions" class="link">expositions</a></li>
         <li><a href="#infos" class="link">infos</a></li>
-        <li><a href="#infos" class="link">en</a></li>
+        <li><a href="pdf/post-medium-chaumont-fr-en.pdf" target="_blank" title="PDF" class="link">en</a></li>
     </ul>
 </nav>
 
