Add phone lnk + some pimp on info 🤪

--- a/index.html
+++ b/index.html
@@ -2468,19 +2468,31 @@
         <p>infos</p>
     </header>
 
-    <section class="flex">
+    <section class="flex" style="align-items:flex-end">
 
         <header class="event-what">
 
             <h1>
-                le Signe,<br>centre national<br>du graphisme<br>
-                1 Place Émile Goguenheim<br>
-                52000 CHAUMONT<br>
-                03 25 35 79 01<br>
-                <a href="mailto:contact@cndg.fr">contact@cndg.fr</a>
+                le Signe<br>centre<br>national<br>du graphisme<br>
+                1 Place<br>Émile<br>Goguenheim
+
             </h1>
 
         </header>
+        <header class="event-what">
+
+            <h1>
+                52000<br>Chaumont<br>France<br>
+                <a href="mailto:contact@cndg.fr">contact@cndg.fr</a><br>
+                <a href="tel:+33-3-25-35-79-01" rel="nofollow">03 25 35<br>79 01<br>
+
+            </h1>
+
+        </header>
+
+    </section>
+
+    <section class="flex">
 
         <div class="content">
 
