More digest bottom page 🥨

--- a/index.html
+++ b/index.html
@@ -2560,9 +2560,9 @@
         <p>remerciements</p>
     </header>
 
-    <section class="intro">
+    <section class="intro columned">
 
-        <p>Post Medium - Biennale internationale de design graphique - Chaumont 2019 est organis&eacute;e par le Signe, centre national du graphisme.</p>
+        <p>Post Medium - Biennale internationale <br>de design graphique - Chaumont 2019 est organis&eacute;e par le Signe, centre national du graphisme.</p>
 
         <p>Elle b&eacute;n&eacute;ficie du soutien principal de la Ville de Chaumont, du Minist&egrave;re de la Culture (DRAC Grand Est), de la R&eacute;gion Grand Est, de l&rsquo;Union Europ&eacute;enne (LEADER, Pays de Chaumont), du D&eacute;partement de la Haute-Marne et de la Soci&eacute;t&eacute; des Auteurs des arts visuels et de l&rsquo;Image Fixe.</p>
 
