Bottom page cleaner...

--- a/index.html
+++ b/index.html
@@ -2554,7 +2554,7 @@
 
 </main>
 
-<main class="event">
+<main id="thanks" class="event">
 
     <header class="event-top">
         <p>remerciements</p>
