Link new images

--- a/index.html
+++ b/index.html
@@ -1473,6 +1473,7 @@
     <div id="lnk-event-13"></div>
 
     <div class="section-img">
+        <img src="photos/visuel-les-soleil-de-la-rochotte.jpg"/>
     </div>
 
     <section class="flex">
@@ -1485,9 +1486,21 @@
         </header>
 
         <div class="content">
-            <p>Projet proposé par Fabrication Maison &amp; Michel Séonnet, mené entre 2018 et 2019 avec le centre social Point Commun et ses voisins, l'école Robert Pillon et le Vestiaire</p>
-            <p>Fabrication Maison invite femmes et hommes à partager leurs soleils, pour faire briller le quartier de La Rochotte à travers ses habitants, leurs mémoires, leurs histoires, leurs espoirs. En résultent 23 soleils à découvrir dans une installation à grande échelle, au cœur du quartier de La Rochotte, et dans une œuvre textile unique dans les vitrines du Vestiaire (boutique en centre-ville).</p>
-            <p>Des visites-guidées gratuites et ouvertes à tous sont également proposées samedi 25 mai : le matin à 10h48 et l’après-midi à 14h48 ! Prendre la ligne 1 ou 2, à 10h34 le matin, à 14h34 l’après-midi depuis (quel arrêt ?), et descendre à l’arrêt Rochotte.</p>
+            <p>
+                Projet proposé par Fabrication Maison &amp; Michel Séonnet, mené entre 2018 et 2019 avec le centre social Point Commun et ses voisins, l'école Robert Pillon et le Vestiaire
+            </p>
+            <p>
+                Fabrication Maison invite femmes et hommes à partager leurs soleils, pour faire briller le quartier de La Rochotte à travers ses habitants, leurs mémoires, leurs histoires, leurs espoirs. En résultent 23 soleils à découvrir dans une installation à grande échelle, au cœur du quartier de La Rochotte, et dans une œuvre textile unique dans les vitrines du Vestiaire (boutique en centre-ville).
+            </p>
+            <p>
+                Des visites-guidées gratuites et ouvertes à tous sont également proposées samedi 25 mai :
+            </p>
+            <p>
+                le matin à 10h48 et l’après-midi à 14h48 !
+            </p>
+            <p>
+                Prendre la ligne 1 ou 2, à 10h34 le matin, à 14h34 l’après-midi depuis 🐌, et descendre à l’arrêt Rochotte.
+            </p>
         </div>
 
     </section>
@@ -1680,6 +1693,7 @@
     <div id="lnk-event-concert"></div>
 
     <div class="section-img">
+        <img src="photos/evenement-concerts.jpg"/>
     </div>
 
     <section class="flex">
