Mobile home Update 💀

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </ul>
 </nav>
 
-<a href="vote.html" target="_blank"><div class="pastille">VP</div></a>
+<!--<a href="#" target="_blank"><div class="pastille">VP</div></a>-->
 <div class="pastille-2">site in<br>progress</div>
 
 <main id="home">
@@ -578,7 +578,7 @@
 
 </main>
 
-<main id="programme">
+<main id="visites">
 
     <header class="year">
         <p>Visites commentées</p>
@@ -645,9 +645,6 @@
     <header class="event-top">
         <p>événements</p>
     </header>
-
-
-
 
 
     <div id="lnk-event-1"></div>
