--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Le Signe</title>
 
-
        <!--_                       __
       /     \  __ ______________  |  | __ ___________
      /  \ /  \|  |  \_  __ \__  \ |  |/ // __ \_  __ \
@@ -27,7 +26,17 @@
 
     <meta name="description" content="POST MEDIUM, Biennale internationale de design graphique, @Chaumont, du 23 mai au 22 septembre 2019">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/theme/fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/theme/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/theme/fav/favicon-16x16.png">
+    <link rel="manifest" href="/theme/fav/site.webmanifest">
+    <link rel="mask-icon" href="/theme/fav/safari-pinned-tab.svg" color="#000000">
+    <link rel="shortcut icon" href="/theme/fav/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Le Signe">
+    <meta name="application-name" content="Le Signe">
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="msapplication-config" content="/theme/fav/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="theme/css/main.css">
 </head>
 
@@ -2495,8 +2504,7 @@
             <h1>
                 52000<br>Chaumont<br>France<br>
                 <a href="mailto:contact@cndg.fr">contact@cndg.fr</a><br>
-                <a href="tel:+33-3-25-35-79-01" rel="nofollow">03 25 35<br>79 01<br>
-
+                <a href="tel:+33-3-25-35-79-01" rel="nofollow">03 25 35<br>79 01</a>
             </h1>
 
         </header>
@@ -2620,18 +2628,14 @@
 <div class="fd-dev-baseline"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<!--<script src="theme/js/main.min.js"></script>-->
-
-<!-- TODO use main.min.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
-<script src="js/path-data-polyfill.js" type="text/javascript"></script>
+<script src="theme/js/assets/path-data-polyfill.min.js" type="text/javascript"></script>
 <script src="theme/js/assets/decomp.min.js" type="text/javascript"></script>
-<script src="theme/js/assets/pathseg.js" type="text/javascript"></script>
+<script src="theme/js/assets/pathseg.min.js" type="text/javascript"></script>
 <script src="theme/js/assets/matter.min.js" type="text/javascript"></script>
 <script src="theme/js/assets/pixi.min.js" type="text/javascript"></script>
-
-<script src="theme/js/graphic.physics.js"></script>
-<script src="theme/js/main.js"></script>
+<script src="theme/js/graphic.physics.min.js"></script>
+<script src="theme/js/main.min.js"></script>
 
 </body>
 </html>
