--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Le Signe</title>
+    <title>POST MEDIUM - Le Signe</title>
 
        <!--_                       __
       /     \  __ ______________  |  | __ ___________
@@ -24,8 +24,9 @@
             |____(____  /__/\_ \\___ /|___|  martin-laxenaire.fr -->
 
 
-    <meta name="description" content="POST MEDIUM, Biennale internationale de design graphique, @Chaumont, du 23 mai au 22 septembre 2019">
+    <meta name="description" content="Biennale internationale de design graphique, @Chaumont, du 23 mai au 22 septembre 2019">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+
     <link rel="apple-touch-icon" sizes="180x180" href="/theme/fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/theme/fav/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/theme/fav/favicon-16x16.png">
@@ -33,10 +34,19 @@
     <link rel="mask-icon" href="/theme/fav/safari-pinned-tab.svg" color="#000000">
     <link rel="shortcut icon" href="/theme/fav/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Le Signe">
+
     <meta name="application-name" content="Le Signe">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-config" content="/theme/fav/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+
+    <meta property="og:image:width" content="1333">
+    <meta property="og:image:height" content="2000">
+    <meta property="og:description" content="Biennale internationale de design graphique, @Chaumont, du 23 mai au 22 septembre 2019">
+    <meta property="og:title" content="POST MEDIUM - Le Signe">
+    <meta property="og:url" content="https://centrenationaldugraphisme.fr">
+    <meta property="og:image" content="https://centrenationaldugraphisme.fr/theme/fav/og-image.jpg">
+
     <link rel="stylesheet" href="theme/css/main.css">
 </head>
 
