commit before merge

--- a/index.html
+++ b/index.html
@@ -2374,7 +2374,7 @@
 
 <!-- TODO use main.min.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
-<script src="js/path-data-polyfill.js" type="text/javascript"></script>
+<script src="theme/js/path-data-polyfill.js" type="text/javascript"></script>
 <script src="theme/js/assets/decomp.min.js" type="text/javascript"></script>
 <script src="theme/js/assets/pathseg.js" type="text/javascript"></script>
 <script src="theme/js/assets/matter.min.js" type="text/javascript"></script>
