Back to normal for graphic.physics 👍

--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
             <p>La traditionnelle soirée DJ/VJ de la Biennale est confiée cette année au label Slurp Records.</p>
             <p>Les graphistes et musiciens vous proposent une expérience immersive qui unit son et image, jusqu’au bout de la nuit !</p>
             <p>Des navettes libres d’accès circulent toute la nuit pour assurer la sécurité des festivaliers (centre-ville/Lycée Charles de Gaulle/QG).</p>
-            <p>Horaires sur le site internet.</p>
+            <p><a href="https://www.facebook.com/events/448996202574167" target="_blank">–> Page de l'événement sur FB</a></p>
 
         </div>
 
@@ -2644,7 +2644,7 @@
 <script src="theme/js/assets/pathseg.min.js" type="text/javascript"></script>
 <script src="theme/js/assets/matter.min.js" type="text/javascript"></script>
 <script src="theme/js/assets/pixi.min.js" type="text/javascript"></script>
-<script src="theme/js/graphic.physics.min.js"></script>
+<script src="theme/js/graphic.physics.js"></script>
 <script src="theme/js/main.min.js"></script>
 
 </body>
