Infos -> Signature update 🍌

--- a/index.html
+++ b/index.html
@@ -2498,12 +2498,12 @@
         <p>infos</p>
     </header>
 
-    <section class="flex" style="align-items:flex-end">
+    <section class="flex signature" style="align-items:flex-end">
 
         <header class="event-what">
 
             <h1>
-                le Signe<br>centre<br>national<br>du graphisme<br>
+                Centre<br>National<br>du Graphisme<br>
                 1 Place<br>Émile<br>Goguenheim
 
             </h1>
@@ -2512,7 +2512,7 @@
         <header class="event-what">
 
             <h1>
-                52000<br>Chaumont<br>France<br>
+                52<span class="triple0">000</span><br>Chaumont<br>France<br>
                 <a href="mailto:contact@cndg.fr">contact@cndg.fr</a><br>
                 <a href="tel:+33-3-25-35-79-01" rel="nofollow">03 25 35<br>79 01</a>
             </h1>
