Vote -> Added to Home Page 💀

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </ul>
 </nav>
 
-<!--<a href="#" target="_blank"><div class="pastille">VP</div></a>-->
+<a href="/vote.html"><div class="pastille">VP</div></a>
 <div class="pastille-2">site in<br>progress</div>
 
 <main id="home">
