--- a/vote.html
+++ b/vote.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>POST MEDIUM - Le Signe</title>
+    <title>Prix du Public - Le Signe</title>
 
         <!--_                       __
        /     \  __ ______________  |  | __ ___________
@@ -11,7 +11,7 @@
      /    Y    \  |  /|  | \// __ \|    <\  ___/|  | \/
      \____|__  /____/ |__|  (____  /__| muraker.com -->
 
-    <meta name="description" content="Biennale internationale de design graphique, @Chaumont, du 23 mai au 22 septembre 2019">
+    <meta name="description" content="En votant, vous contribuez au Prix du Public du 28ème Concours international d'affiches de Chaumont">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/theme/fav/apple-touch-icon.png">
@@ -29,8 +29,8 @@
 
     <meta property="og:image:width" content="1333">
     <meta property="og:image:height" content="2000">
-    <meta property="og:description" content="Biennale internationale de design graphique, @Chaumont, du 23 mai au 22 septembre 2019">
-    <meta property="og:title" content="POST MEDIUM - Le Signe">
+    <meta property="og:description" content="En votant, vous contribuez au Prix du Public du 28ème Concours international d'affiches de Chaumont">
+    <meta property="og:title" content="Prix du Public - Le Signe">
     <meta property="og:url" content="https://centrenationaldugraphisme.fr">
     <meta property="og:image" content="https://centrenationaldugraphisme.fr/theme/fav/og-image.jpg">
 
@@ -40,15 +40,12 @@
 <body>
 
 <main class="vote">
-    <iframe id="typeform-full" width="100%" height="100%" frameborder="0"
-            src="https://muraker.typeform.com/to/GwNM8n"></iframe>
+    <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://muraker.typeform.com/to/GwNM8n"></iframe>
     <script type="text/javascript" src="https://embed.typeform.com/embed.js"></script>
 </main>
 
 <main class="affiches">
-
     <div id="loader">Loading...</div>
-
     <ul id="wrapper">
         <li><div class="affiche"><img src="affiches/001.jpg"/></div></li>
         <li><div class="affiche"><img src="affiches/002.jpg"/></div></li>
@@ -83,7 +80,6 @@
         <li><div class="affiche"><img src="affiches/031.jpg"/></div></li>
         <li><div class="affiche"><img src="affiches/032.jpg"/></div></li>
         <li><div class="affiche"><img src="affiches/033.jpg"/></div></li>
-        <li><div class="affiche"><img src="affiches/034.jpg"/></div></li>
         <li><div class="affiche"><img src="affiches/035.jpg"/></div></li>
         <li><div class="affiche"><img src="affiches/036.jpg"/></div></li>
         <li><div class="affiche"><img src="affiches/037.jpg"/></div></li>
@@ -165,6 +161,7 @@
 <div class="fd-dev-baseline"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 <script>
     $(window).on('load', function (e) {
         $('#loader').css('display','none');
