Vote -> Add 1 affiche... 👿

--- a/vote.html
+++ b/vote.html
@@ -155,6 +155,7 @@
         <li><div class="affiche"><img src="affiches/107.jpg"/></div></li>
         <li><div class="affiche"><img src="affiches/108.jpg"/></div></li>
         <li><div class="affiche"><img src="affiches/109.jpg"/></div></li>
+        <li><div class="affiche"><img src="affiches/203.jpg"/></div></li>
     </ul>
 </main>
 
