Add infos signature 🌈

--- a/index.html
+++ b/index.html
@@ -2503,6 +2503,7 @@
         <header class="event-what">
 
             <h1>
+                <img class="signature-sb" src="theme/img/sb.svg"/>
                 Centre<br>National<br>du Graphisme<br>
                 1 Place<br>Émile<br>Goguenheim
 
