Add /conditions + Front Update ☠️

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div class="content edito">
         <p>S’inscrivant dans la continuité de l’emblématique festival de l’affiche de Chaumont, la Biennale internationale de design graphique célèbre durant quatre mois le design graphique et son actualité et permet à tous les curieux et les professionnels de partager un moment convivial et de découvrir les enjeux de la discipline à travers de nombreux événements dans toute la ville.</p>
-        <p>Intitulée <em>Post Medium</em>, cette 2e édition met l’accent sur une sélection de travaux de designers graphiques envisageant la relation comme forme, forme qui excéderait son premier support d’application. À l’ère de l’œuvre d’art à l’époque de sa reproductibilité technique, la représentation sur l’écran d’affichage d’une montre connectée d’une affiche serait-elle moins valide que son originale imprimée ?</p>
+        <p>Intitulée <em>Post Medium</em>, cette 2<sup><small>e</small></sup> édition met l’accent sur une sélection de travaux de designers graphiques envisageant la relation comme forme, forme qui excéderait son premier support d’application. À l’ère de l’œuvre d’art à l’époque de sa reproductibilité technique, la représentation sur l’écran d’affichage d’une montre connectée d’une affiche serait-elle moins valide que son originale imprimée ?</p>
         <p>Les publics découvriront une programmation qui met en lumière aussi bien la jeune création que des artistes majeurs de la scène du design graphique, entre expositions collectives, thématiques et monographiques. Acteurs de la Biennale, chaumontais, festivaliers, étudiants et professionnels sont invités à participer aux ateliers, concerts, conférences et autres événements qui rythmeront le temps fort de la Biennale !</p>
         <p>Jean-Michel Géridan<br><small>Commissaire général</small></p>
     </div>
@@ -261,7 +261,7 @@
 
             <div class="event">
                 <a href="#lnk-event-table-1">
-                    <p class="title">Elise Gay, Kevin Donnot, Eric Shrijver</p>
+                    <p class="title">Elise Gay, Kevin Donnot, Eric Schrijver</p>
                     <p class="info">
                         <span class="type">table ronde<br>avec traduction</span>
                         <span class="lieux">Cinéma À l’Affiche</span>
@@ -385,7 +385,7 @@
                     <p class="info">
                         <span class="type">événement</span>
                         <span class="lieux">Chapelle des Jésuites</span>
-                        <span class="horaire">11h à 18h</span>
+                        <span class="horaire">14h à 20h</span>
                     </p>
                 </a>
             </div>
@@ -428,6 +428,17 @@
                         <span class="type">ateliers tous publics</span>
                         <span class="lieux">Village</span>
                         <span class="horaire">14h à 17h</span>
+                    </p>
+                </a>
+            </div>
+
+            <div class="event">
+                <a href="#lnk-event-visite">
+                    <p class="title">Visite privée</p>
+                    <p class="info">
+                        <span class="type">Visites<br>par Fabien Chaminade</span>
+                        <span class="lieux">Salle du parloir<br>(Chapelle des Jésuites)</span>
+                        <span class="horaire">14h</span>
                     </p>
                 </a>
             </div>
@@ -480,6 +491,17 @@
                         <span class="lieux">Village</span>
                         <span class="horaire">à partir de 16h</span>
                     </p>
+            </div>
+
+            <div class="event">
+                <a href="#lnk-event-bb">
+                    <p class="title">Bruit blanc</p>
+                    <p class="info">
+                        <span class="type">Performance<br>avec Malte Martin</span>
+                        <span class="lieux">Chapelle des Jésuites</span>
+                        <span class="horaire">18h</span>
+                    </p>
+                </a>
             </div>
 
             <div class="event">
@@ -540,11 +562,22 @@
             </div>
 
             <div class="event">
+                <a href="#lnk-event-visite">
+                    <p class="title">Visite privée</p>
+                    <p class="info">
+                        <span class="type">Visites<br>par Fabien Chaminade</span>
+                        <span class="lieux">Salle du parloir<br>(Chapelle des Jésuites)</span>
+                        <span class="horaire">10h</span>
+                    </p>
+                </a>
+            </div>
+
+            <div class="event">
                 <a href="#lnk-event-3">
                     <p class="title">Brunch</p>
                     <p class="info">
                         <span class="lieux">Chapelle des Jésuites</span>
-                        <span class="horaire">11h à 12h</span>
+                        <span class="horaire">11h à 18h</span>
                     </p>
                 </a>
             </div>
@@ -802,26 +835,29 @@
             <p>L’association Chaumont Design Graphique vous invite à la seconde édition de <strong>C H A P E L L E</strong>, salon de l’édition graphique. Panorama vivant de l’édition alternative autour du design graphique et du dessin, le salon expose et fait découvrir à tous des trésors peu connus de la culture graphique actuelle, en présentant des objets singuliers et rares.</p>
             <p>Avec :</p>
             <ul>
-                <li>205 (Lyon)</li>
-                <li>369 (Paris)<br/>L'Articho (Paris/Marseille)</li>
-                <li>B42 (Paris)</li>
+                <li>369 éditions (Paris)</li>
+                <li>L’Articho (Paris-Marseille)</li>
                 <li>Batt Coop (Paris)</li>
-                <li>Chaumont Design Graphique (Chaumont)</li>
-                <li>Dos bleu (Nancy)</li>
+                <li>Chaumont Design Graphique (Chaumont) </li>
+                <li>Dos bleu (Nancy) </li>
+                <li>Fotokino (Marseille)</li>
+                <li>L'Échapée (Bagnolet)</li>
+                <li>Éditions deux-cent-cinq (Lyon)</li>
+                <li>Éditions B42 (Paris)</li>
+                <li>Éditions Matière (Montreuil)</li>
                 <li>Empire (Paris)</li>
                 <li>Fanzines ! Festival (Paris)</li>
-                <li>Fotokino (Marseille)</li>
-                <li>L'Échappée (Bagnolet)</li>
                 <li>Félicité Landrivon (Lyon)</li>
-                <li>Les graphistes affichés (Chaumont)</li>
-                <li>Lagon (Paris/Saint-Férreol-Trente-Pas)</li>
-                <li>Les Martine's (Paris)</li>
-                <li>Matière (Montreuil)</li>
-                <li>Le Mégot (Paris-Metz)</li>
-                <li>Profane ( Paris )</li>
+                <li>Les Graphistes affichés (Chaumont)</li>
+                <li>L’institut sérigraphique ( Paris)</li>
+                <li>Martine's édition (Maisons-Alfort)</li>
+                <li>LeMégot éditions (Paris/Metz)</li>
+                <li>Profane (Paris)</li>
+                <li>Revue Lagon (Paris/Saint-Férreol-Trente-Pas)</li>
+                <li>Sammy Stein (Paris)</li>
                 <li>Super-Structure (Bruxelles)</li>
-                <li>Surfaces utiles (Bruxelles)</li>
-                <li>Spector books ( Leipzig )</li>
+                <li>Surfaces Utiles  & La Perruque (Bruxelles)</li>
+                <li>Spector Books (Leipzig)</li>
                 <li>Tombolo Presses (Nevers)</li>
                 <li>Zeug (Paris)</li>
             </ul>
@@ -1371,6 +1407,109 @@
 
             <p>Comme le Lumigraphe, conçu par Patrick Lindsay et développé en 2016 à l’initiative du Signe, le Lumiscope est un ensemble de modules gravés et découpés dans du plexiglas transparent et de couleur.</p>
             <p>Entre le puzzle et l’engrenage, ces éléments permettent une infinité de combinaisons. Basé sur la superposition, la rotation et la lumière, cet atelier met l’accent sur les illusions d’optique et l’art cinétique.</p>
+        </div>
+
+    </section>
+
+
+
+    <div id="lnk-event-bb"></div>
+
+    <div class="section-img">
+    </div>
+
+    <section class="flex">
+
+        <header class="event-what">
+
+            <h1>
+                Bruit blanc
+            </h1>
+
+            <h2>
+                25.05
+                <span class="time">18h</span>
+            </h2>
+
+            <div class="lieux">
+                <p>La Chapelle des Jésuites</p>
+            </div>
+
+            <div class="sub-header">
+
+                <div>
+
+                    <p>
+                        <span class="title">Performance avec</span>
+                        Malte Martin
+                    </p>
+
+                </div>
+            </div>
+
+        </header>
+
+        <div class="content">
+
+            <p>À la base de ce projet, il y a des objets graphiques créés par le graphiste Malte Martin.
+            Un ensemble de partitions minimalistes et abstraites et qui peuvent se combiner à l’infini.</p>
+            <p>Dans cette performance, Malte Martin les manipule devant le public.</p>
+            <p>Il est accompagné par Les Martine’s : Anne (voix) et Richard (guitare), qui interprètent ses partitions, pour un moment musical très libre.</p>
+
+        </div>
+
+    </section>
+
+
+
+    <div id="lnk-event-visite"></div>
+
+    <div class="section-img">
+    </div>
+
+    <section class="flex">
+
+        <header class="event-what">
+
+            <h1>
+                Visite privée<br>
+                Livres et imprimés français des <br>années 1930
+            </h1>
+
+            <h2>
+                25.05
+                <span class="time">14h-18h</span><br>
+                26.05
+                <span class="time">10h-14h</span>
+            </h2>
+
+            <div class="lieux">
+                <p>Salle du parloir<br>
+                    (attenante à la Chapelle des Jésuites)</p>
+            </div>
+
+            <div class="sub-header">
+
+                <div>
+
+                    <p>
+                        <span class="title">Par</span>
+                        Fabien Chaminade
+                    </p>
+
+                </div>
+            </div>
+
+        </header>
+
+        <div class="content">
+
+            <p>Graphiste avant tout, passé par l’enseignement, Fabien Chaminade se définit lui-même comme un « enquêteur graphique ». C’est ce qui l’a amené à approfondir ses connaissances sur la scène graphique française des années 1930 et à rassembler au fil des années une vaste documentation sur cette époque : magazines, annonces-presse, brochures commerciales, imprimés publicitaires, partitions, etc.</p>
+
+            <p>En effet, en France à la fin des années 1920, une esthétique novatrice s’impose au public par l’intermédiaire de la publicité, de l’édition et de la presse, portée par une génération spontanée de jeunes créateurs épris d’invention et de simplicité, mais aussi par quelques grands patrons visionnaires. Cette approche résolue et dynamique de la mise en pages mêle intimement typographie et photographie, voire photomontage, et marque la véritable naissance du graphisme moderne en France. Elle est pourtant encore étonnamment mal identifiée aujourd’hui dans le contexte national et reste très peu analysée et étudiée. Le corpus important que Fabien Chaminade a réuni éclaire l’idée qu’à cette époque s’invente un graphisme français endogène et original qui va influencer la création graphique d’après-guerre, voire au-delà. </p>
+
+            <p>En écho à ce salon de l’édition qu’est C H A P E L L E, il propose un petit panorama de livres, brochures, catalogues et autres imprimés, qui seront visibles lors de visites et de consultations en sa compagnie, suivies de discussions. Une manière d’appréhender les archives de cette époque, à travers une sélection de documents rares. </p>
+
         </div>
 
     </section>
@@ -1949,7 +2088,7 @@
                 <div>
                     <p>
                         <span class="title">Avec</span>
-                        Elise Gay<br>Kevin Donnot<br>Eric Shrijver
+                        Elise Gay<br>Kevin Donnot<br>Eric Schrijver
                     </p>
                 </div>
             </div>
@@ -1959,7 +2098,7 @@
         <div class="content">
 
             <p>Les technologies des images sont autant d’outils, de ressources que de postures pour les designers.</p>
-            <p>Elise Gay et Kevin Donnot, par la revue Back Office, dressent un panorama de la création graphique numérique tandis que Erik Shrijver propose un accompagnement dans la jungle du copyright avec son livre <em>Don’t copy this book</em>.</p>
+            <p>Elise Gay et Kevin Donnot, par la revue Back Office, dressent un panorama de la création graphique numérique tandis que Erik Schrijver propose un accompagnement dans la jungle du copyright avec son livre <em>Copy this book</em>.</p>
 
         </div>
 
