Update some dates... 😱

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     <p class="info">
                         <span class="type">événement</span>
                         <span class="lieux">Chapelle des Jésuites</span>
-                        <span class="horaire">14h à 20h</span>
+                        <span class="horaire">14h à 21h</span>
                     </p>
                 </a>
             </div>
@@ -468,7 +468,7 @@
             <div class="event">
                     <p class="title">Vente de mets issus des recettes du livre de cuisine créés par les résidents du CADA - France Terre d'Asile et le Studio Adeline & Martin</p>
                     <p class="info">
-                        <span class="lieux">Tisza</span>
+                        <span class="lieux">Village</span>
                         <span class="horaire">15h</span>
                     </p>
             </div>
@@ -577,7 +577,7 @@
                     <p class="title">Brunch</p>
                     <p class="info">
                         <span class="lieux">Chapelle des Jésuites</span>
-                        <span class="horaire">11h à 18h</span>
+                        <span class="horaire">11h</span>
                     </p>
                 </a>
             </div>
@@ -597,7 +597,7 @@
                     <p class="title">Salon de l’édition graphique</p>
                     <p class="info">
                         <span class="lieux">Chapelle des Jésuites</span>
-                        <span class="horaire">13h à 17h</span>
+                        <span class="horaire">10h à 16h</span>
                     </p>
                 </a>
             </div>
@@ -862,7 +862,7 @@
                 <li>Zeug (Paris)</li>
             </ul>
             <p>
-                Horaires : 25.05 11h - 18h, 26.05 13h - 17h<br>
+                Horaires : 25.05 14h - 21h, 26.05 10h - 16h<br>
                 Brunch : 26.05 à 11h
             </p>
         </div>
