--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
     <div id="lnk-event-2"></div>
 
     <div class="section-img">
-        <img src="photos/evenement-ceremonie-de-remise-des-prix-3.jpg"/>
+        <img src="photos/opt/evenement-ceremonie-de-remise-des-prix-3.jpg"/>
     </div>
 
     <section class="flex">
@@ -794,7 +794,7 @@
     <div id="lnk-event-3"></div>
 
     <div class="section-img">
-        <img src="photos/evenement-chapelle-salon-de-ledition-graphique-2.jpg"/>
+        <img src="photos/opt/evenement-chapelle-salon-de-ledition-graphique-2.jpg"/>
     </div>
 
     <section class="flex">
@@ -1039,7 +1039,7 @@
     <div id="lnk-event-7"></div>
 
     <div class="section-img">
-        <img src="photos/evenement-upperslurp-print-hd.jpg"/>
+        <img src="photos/opt/evenement-upperslurp-print-hd.jpg"/>
     </div>
 
     <section class="flex">
@@ -1183,7 +1183,7 @@
     <div id="lnk-event-9"></div>
 
     <div class="section-img">
-        <img src="photos/evenement-ateliers.jpg"/>
+        <img src="photos/opt/evenement-ateliers.jpg"/>
     </div>
 
     <section class="flex">
@@ -1584,7 +1584,7 @@
     <div id="lnk-event-16"></div>
 
     <div class="section-img">
-        <img src="photos/evenement-balades-graphiques-en-ville.jpg"/>
+        <img src="photos/opt/evenement-balades-graphiques-en-ville.jpg"/>
     </div>
 
     <section class="flex">
@@ -1628,7 +1628,7 @@
     <div id="lnk-event-13"></div>
 
     <div class="section-img">
-        <img src="photos/visuel-les-soleil-de-la-rochotte.jpg"/>
+        <img src="photos/opt/visuel-les-soleil-de-la-rochotte.jpg"/>
     </div>
 
     <section class="flex">
@@ -1848,7 +1848,7 @@
     <div id="lnk-event-concert"></div>
 
     <div class="section-img">
-        <img src="photos/evenement-concerts.jpg"/>
+        <img src="photos/opt/evenement-concerts.jpg"/>
     </div>
 
     <section class="flex">
@@ -1896,7 +1896,7 @@
 
 
     <div class="section-img">
-        <img src="photos/evenement-conferences-2.jpg"/>
+        <img src="photos/opt/evenement-conferences-2.jpg"/>
     </div>
 
 
@@ -2058,7 +2058,7 @@
 
 
     <div class="section-img">
-        <img src="photos/evenement-tables-rondes-professionnelles.jpg"/>
+        <img src="photos/opt/evenement-tables-rondes-professionnelles.jpg"/>
     </div>
 
     <section class="intro">
@@ -2230,7 +2230,7 @@
     <div id="lnk-event-expo-1"></div>
 
     <div class="section-img">
-        <img src="photos/expo-post-medium.jpg"/>
+        <img src="photos/opt/expo-post-medium.jpg"/>
     </div>
 
     <section class="flex">
@@ -2281,7 +2281,7 @@
     <div id="lnk-event-expo-2"></div>
 
     <div class="section-img">
-        <img src="photos/expo-concours-international.jpg"/>
+        <img src="photos/opt/expo-concours-international.jpg"/>
     </div>
 
     <section class="flex">
@@ -2331,7 +2331,9 @@
 
     <div id="lnk-event-expo-3"></div>
 
-    <div class="section-img"></div>
+    <div class="section-img">
+        <img src="photos/opt/ls-knw-mw-296-297.jpg"/>
+    </div>
 
     <section class="flex">
 
@@ -2380,7 +2382,7 @@
     <div id="lnk-event-expo-4"></div>
 
     <div class="section-img">
-        <img src="photos/expo-frederic-teschner-rue-de-paris-gravures-030217-page-03.jpg"/>
+        <img src="photos/opt/expo-frederic-teschner-rue-de-paris-gravures-030217-page-03.jpg"/>
     </div>
 
     <section class="flex">
@@ -2427,7 +2429,7 @@
     <div id="lnk-event-expo-5"></div>
 
     <div class="section-img">
-        <img src="photos/expo-camille-trimardeau-bc-livre-symbole-des-elements-gymniques.jpg"/>
+        <img src="photos/opt/expo-camille-trimardeau-bc-livre-symbole-des-elements-gymniques.jpg"/>
     </div>
 
     <section class="flex">
@@ -2469,7 +2471,7 @@
     <div id="lnk-event-expo-6"></div>
 
     <div class="section-img">
-        <img src="photos/expo-exemplaire-formes-et-pratiques-de-ledition-2.jpg"/>
+        <img src="photos/opt/expo-exemplaire-formes-et-pratiques-de-ledition-2.jpg"/>
     </div>
 
     <section class="flex">
@@ -2549,7 +2551,7 @@
     <div id="lnk-event-expo-8"></div>
 
     <div class="section-img">
-        <img src="photos/expo-concours-etudiants-draw-chaumont-color-decli-250-160.jpg"/>
+        <img src="photos/opt/expo-concours-etudiants-draw-chaumont-color-decli-250-160.jpg"/>
     </div>
 
     <section class="flex">
@@ -2677,7 +2679,7 @@
     <div id="village"></div>
 
     <div class="section-img">
-        <img src="photos/evenement-le-village-de-la-biennale-2.jpg"/>
+        <img src="photos/opt/evenement-le-village-de-la-biennale-2.jpg"/>
     </div>
 
     <section class="flex">
