--- a/index.html
+++ b/index.html
@@ -2716,7 +2716,7 @@
 
             <p><u>le Signe,<br>centre national du graphisme</u><br/>Mercredi 22 et jeudi 23 mai : 14h à 21h<br/>Vendredi 24, samedi 25 de 10h à 20h<br/>Dimanche 26 mai de 10h à 18h</p>
             <p><u>Musée d’art et d’histoire de Chaumont</u><br/>Samedi 25, dimanche 26 mai de 10h à 18h </p>
-            <p><u>Médiathèque les silos,<br>maison du livre et de l’affiche de Chaumont</u><br/>Samedi 25, dimanche 26 mai de 9h30 à 18h30</p>
+            <p><u>Médiathèque les silos,<br>maison du livre et de l’affiche de Chaumont</u><br/>Samedi 25, dimanche 26 mai de 10h à 18h</p>
             <p><u>Tisza Textil Packaging</u><br/>Samedi 25, dimanche 26 mai de 10h à 20h</p>
 
         </div>
