--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </ul>
 </nav>
 
-<a href="/vote.html"><div class="pastille">VOTE<br>PUBLIC</div></a>
+<a href="/deliberations" target="_blank"><div class="pastille">DÉLIB<br>ÉRATION</div></a>
 <div class="pastille-2">site in<br>progress</div>
 
 <main id="home">
