--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>POST MEDIUM - Le Signe</title>
+    <title>Le Signe</title>
 
        <!--_                       __
       /     \  __ ______________  |  | __ ___________
@@ -40,12 +40,12 @@
     <meta name="msapplication-config" content="/theme/fav/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <meta property="og:image:width" content="1333">
-    <meta property="og:image:height" content="2000">
-    <meta property="og:description" content="Biennale internationale de design graphique, @Chaumont, du 23 mai au 22 septembre 2019">
-    <meta property="og:title" content="POST MEDIUM - Le Signe">
+    <meta property="og:image:width" content="1191">
+    <meta property="og:image:height" content="1786">
+    <meta property="og:description" content="Centre National du Graphisme &amp; POST MEDIUM - Biennale internationale de design graphique, @Chaumont, du 23 mai au 22 septembre 2019">
+    <meta property="og:title" content="Le Signe - Programme &eacute;t&eacute; 2019">
     <meta property="og:url" content="https://centrenationaldugraphisme.fr">
-    <meta property="og:image" content="https://centrenationaldugraphisme.fr/theme/fav/og-image.jpg">
+    <meta property="og:image" content="https://centrenationaldugraphisme.fr/theme/fav/og-affiche.jpg">
 
     <link rel="stylesheet" href="theme/css/main.css">
 </head>
