Social OG Update 👀 II

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <meta property="og:description" content="Centre National du Graphisme &amp; POST MEDIUM - Biennale internationale de design graphique, @Chaumont, du 23 mai au 22 septembre 2019">
     <meta property="og:title" content="Le Signe - Programme &eacute;t&eacute; 2019">
     <meta property="og:url" content="https://centrenationaldugraphisme.fr">
-    <meta property="og:image" content="https://centrenationaldugraphisme.fr/theme/fav/og-affiche.jpg">
+    <meta property="og:image" content="https://centrenationaldugraphisme.fr/theme/fav/og-image.jpg">
 
     <link rel="stylesheet" href="theme/css/main.css">
 </head>
