--- a/index.html
+++ b/index.html
@@ -67,6 +67,55 @@
     </div>
 </main>
 
+<main class="event">
+
+    <div id="lnk-event-expo-0"></div>
+
+    <div class="section-img">
+        <img src="photos/opt/expo-locomotion.jpg"/>
+    </div>
+
+    <section class="flex">
+
+        <header class="event-what">
+
+            <h1>Locomotions I</h1>
+
+            <p>Concevoir les modalités de <br>déplacements individuels par l’affiche.</p>
+
+            <h2>01.08 au<br>20.10</h2>
+
+            <div class="lieux"><p>Le Signe</p></div>
+
+            <div class="sub-header">
+
+                <div>
+                    <p><span class="title">Commisariat</span>
+                        Virginie Vignon
+                    </p>
+                </div>
+                <div>
+                    <p><span class="title">Scénographie</span>
+                        Pernelle Poyet
+                    </p>
+                </div>
+            </div>
+
+        </header>
+
+        <div class="content">
+
+            <p>L’exposition d'été du Signe, centre national du graphisme, invite à découvrir comment l'affiche s'est emparée de la question des transports et des modes de déplacement individuels à travers les affiches anciennes et contemporaines des collections de la Ville de Chaumont, tandis que les transports collectifs feront l'objet d'une exposition à part entière à l'été 2020.</p>
+            <p>De la marche à pied pratiquée depuis les origines de l'humanité jusqu'à l'automobile reine de la fin du XXe siècle, en passant par le cheval ou le vélo, les moyens de locomotions individuels, qu'ils soient musculaires ou motorisés, répondent à des besoins et soulèvent des enjeux que les affichistes ont su révéler : la vitesse, les infrastructures, la santé et l'environnement, les loisirs et le tourisme sont autant de questions abordées dans le parcours chronologique et thématique de l'exposition.</p>
+            <p>Des visites commentées de Locomotions I sont prévues les dimanches 4 et 25 août à 15h (durée 1h).</p>
+
+        </div>
+
+    </section>
+
+</main>
+
+
 <nav id="biennale">
     <ul>
         <li><a href="#home" class="link active">la biennale</a></li>
@@ -81,6 +130,9 @@
 
 <a href="/deliberations" target="_blank"><div class="pastille">DÉLIB<br>ÉRATION</div></a>
 <div class="pastille-2">site in<br>progress</div>
+<a href="/pdf/appel-residence-prospectives-graphiques-fr.pdf" target="_blank">
+    <div class="pastille-3"><img src="theme/img/residence.png"/></div>
+</a>
 
 <main id="home">
     <div class="content affiche">
